--- a/android/app/src/main/res/layout/fragment_main.xml
+++ b/android/app/src/main/res/layout/fragment_main.xml
@@ -7,20 +7,33 @@
     >
 
     <LinearLayout
-        android:id="@+id/connectionStatus"
-        android:background="@color/disconnected"
+        android:id="@+id/connectionBar"
+        android:background="@color/colorConnectionBar"
         android:layout_width="match_parent"
         android:layout_height="25dp"
         android:orientation="horizontal"
         >
 
+        <FrameLayout
+            android:id="@+id/connectionStatus"
+            android:background="@drawable/redcircle"
+            android:layout_width="8dp"
+            android:layout_height="8dp"
+            android:layout_marginLeft="15dp"
+            android:layout_gravity="center_vertical"
+            >
+
+        </FrameLayout>
+
         <TextView
             android:id="@+id/connectionStatusText"
-            android:textColor="@color/colorPrimaryLight"
+            android:textColor="#7c7c7c"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="DISCONNECTED"
-            android:gravity="center"
+            android:text="Disconnected"
+            android:textSize="12dp"
+            android:layout_marginLeft="10dp"
+            android:gravity="center_vertical"
             android:textStyle="bold"
             />
 
