--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#121418</color>
     <color name="colorPrimaryDark">#000000</color>
+    <color name="colorConnectionBar">#0b0d10</color>
     <color name="colorPrimaryLight">#FFFFFF</color>
     <color name="colorAccent">#2157E0</color>
     <color name="connected">#2EFF36</color>
