--- a/android/app/src/main/res/layout/fragment_main.xml
+++ b/android/app/src/main/res/layout/fragment_main.xml
@@ -73,6 +73,19 @@
         android:text="LED    "
         />
 
+    <Switch
+        android:id="@+id/alarmSwitch"
+        android:trackTint="@color/colorPrimaryLight"
+        android:textColor="@color/colorPrimaryLight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="105dp"
+        android:checked="false"
+        android:text="ALARM    "
+        />
+
     <ToggleButton
         android:id="@+id/ipToggle"
         android:layout_width="wrap_content"
