--- a/android/app/src/main/res/layout/fragment_main.xml
+++ b/android/app/src/main/res/layout/fragment_main.xml
@@ -27,50 +27,69 @@
 
         <TextView
             android:id="@+id/connectionStatusText"
-            android:textColor="#7c7c7c"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Disconnected"
-            android:textSize="12dp"
+            android:layout_marginBottom="2dp"
             android:layout_marginLeft="10dp"
+            android:fontFamily="@font/titillium_web_bold"
             android:gravity="center_vertical"
-            android:textStyle="bold"
-            />
+            android:text="Disconnected"
+            android:textColor="#7c7c7c"
+            android:textSize="12dp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
     <TextView
-        android:id="@+id/temperature"
-        android:textColor="@color/colorPrimaryLight"
+        android:id="@+id/tempTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Temperature: -°C"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="15dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="35dp"
+        android:fontFamily="@font/titillium_web_bold"
+        android:text="Temperature"
+        android:textColor="#747474"
         android:textStyle="bold"
+        android:textSize="12dp"
         />
 
     <TextView
-        android:id="@+id/humidity"
-        android:textColor="@color/colorPrimaryLight"
+        android:id="@+id/temperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Humidity: -%"
-        android:layout_marginTop="65dp"
-        android:layout_marginLeft="15dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="60dp"
+        android:fontFamily="@font/titillium_web"
+        android:text="0°C"
+        android:textColor="@color/colorPrimaryLight"
+        android:textSize="14dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/humidity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="65dp"
+        android:layout_marginTop="60dp"
+        android:fontFamily="@font/titillium_web"
+        android:text="0%"
+        android:textColor="@color/colorPrimaryLight"
         android:textStyle="bold"
+        android:textSize="14dp"
         />
 
-    <Switch
-        android:id="@+id/ledSwitch"
-        android:trackTint="@color/colorPrimaryLight"
-        android:textColor="@color/colorPrimaryLight"
+    <TextView
+        android:id="@+id/alarmTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="105dp"
-        android:checked="false"
-        android:text="LED    "
+        android:layout_marginRight="170dp"
+        android:layout_marginTop="35dp"
+        android:layout_gravity="right"
+        android:fontFamily="@font/titillium_web_bold"
+        android:text="Alarm"
+        android:textColor="#747474"
+        android:textStyle="bold"
+        android:textSize="12dp"
         />
 
     <Switch
@@ -80,10 +99,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="105dp"
+        android:layout_marginRight="162dp"
+        android:layout_marginTop="60dp"
         android:checked="false"
-        android:text="ALARM    "
+
+        />
+
+    <TextView
+        android:id="@+id/ledTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="110dp"
+        android:fontFamily="@font/titillium_web_bold"
+        android:text="Desk Light"
+        android:textColor="#747474"
+        android:textStyle="bold"
+        android:textSize="12dp"
+        />
+
+    <Switch
+        android:id="@+id/ledSwitch"
+        android:trackTint="@color/colorPrimaryLight"
+        android:textColor="@color/colorPrimaryLight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="140dp"
+        android:checked="false"
         />
 
     <ToggleButton
