--- a/android/app/src/main/res/layout/fragment_main.xml
+++ b/android/app/src/main/res/layout/fragment_main.xml
@@ -82,9 +82,8 @@
         android:id="@+id/alarmTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="170dp"
+        android:layout_marginLeft="150dp"
         android:layout_marginTop="35dp"
-        android:layout_gravity="right"
         android:fontFamily="@font/titillium_web_bold"
         android:text="Alarm"
         android:textColor="#747474"
@@ -98,8 +97,7 @@
         android:textColor="@color/colorPrimaryLight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginRight="162dp"
+        android:layout_marginLeft="150dp"
         android:layout_marginTop="60dp"
         android:checked="false"
 
@@ -136,9 +134,163 @@
         android:checked="false"
         android:text="IP"
         android:layout_marginTop="40dp"
-        android:layout_marginRight="20dp"
-        android:layout_gravity="right"
+        android:layout_marginLeft="250dp"
         android:textOff="int.Ip"
         android:textOn="ext.Ip"
         />
+
+    <Button
+        android:id="@+id/BTN_FLASH"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="140dp"
+        android:background="@drawable/btn_round_stroke"
+        android:fontFamily="@font/titillium_web"
+        android:text="F"
+        android:textColor="@color/colorPrimaryLight"
+        android:textSize="12sp" />
+
+    <Button
+        android:id="@+id/BTN_SMOOTH"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="170dp"
+        android:layout_marginTop="140dp"
+        android:background="@drawable/btn_round_stroke"
+        android:fontFamily="@font/titillium_web"
+        android:text="S"
+        android:textColor="@color/colorPrimaryLight"
+        android:textSize="12sp" />
+
+    <Button
+        android:id="@+id/BTN_BRIGHTNESS_UP"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="220dp"
+        android:layout_marginTop="140dp"
+        android:background="@drawable/btn_round_stroke"
+        android:fontFamily="@font/titillium_web"
+        android:text="+"
+        android:textColor="@color/colorPrimaryLight" />
+
+    <Button
+        android:id="@+id/BTN_BRIGHTNESS_DOWN"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="270dp"
+        android:layout_marginTop="140dp"
+        android:background="@drawable/btn_round_stroke"
+        android:fontFamily="@font/titillium_web"
+        android:text="-"
+        android:textColor="@color/colorPrimaryLight" />
+
+    <Button
+        android:id="@+id/BTN_RED"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="190dp"
+        android:background="@drawable/btn_red"
+        android:fontFamily="@font/titillium_web" />
+
+    <Button
+        android:id="@+id/BTN_ORANGE"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="190dp"
+        android:background="@drawable/btn_orange"
+        android:fontFamily="@font/titillium_web" />
+
+    <Button
+        android:id="@+id/BTN_ORANGE2"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="190dp"
+        android:background="@drawable/btn_orange2"
+        android:fontFamily="@font/titillium_web" />
+
+    <Button
+        android:id="@+id/BTN_YELLOW"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="170dp"
+        android:layout_marginTop="190dp"
+        android:background="@drawable/btn_yellow"
+        android:fontFamily="@font/titillium_web" />
+
+    <Button
+        android:id="@+id/BTN_GREEN"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="220dp"
+        android:layout_marginTop="190dp"
+        android:background="@drawable/btn_green"
+        android:fontFamily="@font/titillium_web" />
+
+    <Button
+        android:id="@+id/BTN_TURQ"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="270dp"
+        android:layout_marginTop="190dp"
+        android:background="@drawable/btn_turq"
+        android:fontFamily="@font/titillium_web" />
+
+    <Button
+        android:id="@+id/BTN_BLUE3"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="240dp"
+        android:background="@drawable/btn_blue3"
+        android:fontFamily="@font/titillium_web" />
+
+    <Button
+        android:id="@+id/BTN_BLUE2"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="240dp"
+        android:background="@drawable/btn_blue2"
+        android:fontFamily="@font/titillium_web" />
+
+    <Button
+        android:id="@+id/BTN_BLUE"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="240dp"
+        android:background="@drawable/btn_blue"
+        android:fontFamily="@font/titillium_web" />
+
+    <Button
+        android:id="@+id/BTN_PURPLE"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="170dp"
+        android:layout_marginTop="240dp"
+        android:background="@drawable/btn_purple"
+        android:fontFamily="@font/titillium_web" />
+
+    <Button
+        android:id="@+id/BTN_PINK"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="220dp"
+        android:layout_marginTop="240dp"
+        android:background="@drawable/btn_pink"
+        android:fontFamily="@font/titillium_web" />
+
+    <Button
+        android:id="@+id/BTN_WHITE"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="270dp"
+        android:layout_marginTop="240dp"
+        android:background="@drawable/btn_white"
+        android:fontFamily="@font/titillium_web" />
+
 </FrameLayout>
