--- a/desktop-app/style.css
+++ b/desktop-app/style.css
@@ -13,6 +13,16 @@ body {
 	font-family: 'Poppins', sans-serif;
 }
 
+#titleText {
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	line-height: 40px;
+	color: #878787;
+	font-size: 12px;
+	font-weight: 700;
+}
+
 #textBody {
 	width:250px;
 	height:245px;
@@ -23,6 +33,11 @@ body {
 	margin-top: -122.5px;
 	margin-left: -125px;
 	text-align: center;
+	-webkit-user-select: none; /* Safari */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* IE10+/Edge */
+	user-select: none; /* Standard */
+
 }
 
 #tempText {
@@ -34,6 +49,7 @@ body {
 	font-weight: 800;
 	margin-top: 0px;
 	margin-left: -56px;
+	cursor: default;
 }
 
 #humidText {
@@ -45,6 +61,7 @@ body {
 	font-weight: 800;
 	margin-top: 80px;
 	margin-left: -28px;
+	cursor: default;
 }
 
 #temperature {
@@ -55,6 +72,7 @@ body {
 	font-weight: 400;
 	margin-top: 25px;
 	margin-left: -26px;
+	cursor: default;
 }
 
 #humidity {
@@ -65,6 +83,7 @@ body {
 	font-weight: 400;
 	margin-top: 100px;
 	margin-left: -13px;
+	cursor: default;
 }
 
 #lightText {
@@ -76,6 +95,7 @@ body {
 	font-weight: 800;
 	margin-top: 180px;
 	margin-left: -31px;
+	cursor: default;
 }
 
 .content{
