--- a/android/app/src/main/res/layout/fragment_main.xml
+++ b/android/app/src/main/res/layout/fragment_main.xml
@@ -49,34 +49,32 @@
         android:fontFamily="@font/titillium_web_bold"
         android:text="Temperature"
         android:textColor="#747474"
-        android:textStyle="bold"
-        android:textSize="12dp"
-        />
+        android:textSize="14dp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/temperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="65dp"
         android:fontFamily="@font/titillium_web"
         android:text="0°C"
         android:textColor="@color/colorPrimaryLight"
-        android:textSize="14dp"
+        android:textSize="16dp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/humidity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="65dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="65dp"
         android:fontFamily="@font/titillium_web"
         android:text="0%"
         android:textColor="@color/colorPrimaryLight"
-        android:textStyle="bold"
-        android:textSize="14dp"
-        />
+        android:textSize="16dp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/alarmTitle"
@@ -87,9 +85,8 @@
         android:fontFamily="@font/titillium_web_bold"
         android:text="Alarm"
         android:textColor="#747474"
-        android:textStyle="bold"
-        android:textSize="12dp"
-        />
+        android:textSize="14dp"
+        android:textStyle="bold" />
 
     <Switch
         android:id="@+id/alarmSwitch"
@@ -98,7 +95,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="150dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="64dp"
         android:checked="false"
 
         />
@@ -112,9 +109,8 @@
         android:fontFamily="@font/titillium_web_bold"
         android:text="Desk Light"
         android:textColor="#747474"
-        android:textStyle="bold"
-        android:textSize="12dp"
-        />
+        android:textSize="14dp"
+        android:textStyle="bold" />
 
     <Switch
         android:id="@+id/ledSwitch"
@@ -123,7 +119,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="142dp"
         android:checked="false"
         />
 
@@ -133,7 +129,7 @@
         android:layout_height="wrap_content"
         android:checked="false"
         android:text="IP"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="52dp"
         android:layout_marginLeft="250dp"
         android:textOff="int.Ip"
         android:textOn="ext.Ip"
@@ -141,10 +137,10 @@
 
     <Button
         android:id="@+id/BTN_FLASH"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="120dp"
-        android:layout_marginTop="140dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="135dp"
         android:background="@drawable/btn_round_stroke"
         android:fontFamily="@font/titillium_web"
         android:text="F"
@@ -153,10 +149,10 @@
 
     <Button
         android:id="@+id/BTN_SMOOTH"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="170dp"
-        android:layout_marginTop="140dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="185dp"
+        android:layout_marginTop="135dp"
         android:background="@drawable/btn_round_stroke"
         android:fontFamily="@font/titillium_web"
         android:text="S"
@@ -165,10 +161,10 @@
 
     <Button
         android:id="@+id/BTN_BRIGHTNESS_UP"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="220dp"
-        android:layout_marginTop="140dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="240dp"
+        android:layout_marginTop="135dp"
         android:background="@drawable/btn_round_stroke"
         android:fontFamily="@font/titillium_web"
         android:text="+"
@@ -176,10 +172,10 @@
 
     <Button
         android:id="@+id/BTN_BRIGHTNESS_DOWN"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="270dp"
-        android:layout_marginTop="140dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="295dp"
+        android:layout_marginTop="135dp"
         android:background="@drawable/btn_round_stroke"
         android:fontFamily="@font/titillium_web"
         android:text="-"
@@ -187,8 +183,8 @@
 
     <Button
         android:id="@+id/BTN_RED"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="190dp"
         android:background="@drawable/btn_red"
@@ -196,100 +192,100 @@
 
     <Button
         android:id="@+id/BTN_ORANGE"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="70dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="75dp"
         android:layout_marginTop="190dp"
         android:background="@drawable/btn_orange"
         android:fontFamily="@font/titillium_web" />
 
     <Button
         android:id="@+id/BTN_ORANGE2"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="120dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="130dp"
         android:layout_marginTop="190dp"
         android:background="@drawable/btn_orange2"
         android:fontFamily="@font/titillium_web" />
 
     <Button
         android:id="@+id/BTN_YELLOW"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="170dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="185dp"
         android:layout_marginTop="190dp"
         android:background="@drawable/btn_yellow"
         android:fontFamily="@font/titillium_web" />
 
     <Button
         android:id="@+id/BTN_GREEN"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="220dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="240dp"
         android:layout_marginTop="190dp"
         android:background="@drawable/btn_green"
         android:fontFamily="@font/titillium_web" />
 
     <Button
         android:id="@+id/BTN_TURQ"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="270dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="295dp"
         android:layout_marginTop="190dp"
         android:background="@drawable/btn_turq"
         android:fontFamily="@font/titillium_web" />
 
     <Button
         android:id="@+id/BTN_BLUE3"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="240dp"
+        android:layout_marginTop="245dp"
         android:background="@drawable/btn_blue3"
         android:fontFamily="@font/titillium_web" />
 
     <Button
         android:id="@+id/BTN_BLUE2"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="70dp"
-        android:layout_marginTop="240dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="75dp"
+        android:layout_marginTop="245dp"
         android:background="@drawable/btn_blue2"
         android:fontFamily="@font/titillium_web" />
 
     <Button
         android:id="@+id/BTN_BLUE"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="120dp"
-        android:layout_marginTop="240dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="245dp"
         android:background="@drawable/btn_blue"
         android:fontFamily="@font/titillium_web" />
 
     <Button
         android:id="@+id/BTN_PURPLE"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="170dp"
-        android:layout_marginTop="240dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="185dp"
+        android:layout_marginTop="245dp"
         android:background="@drawable/btn_purple"
         android:fontFamily="@font/titillium_web" />
 
     <Button
         android:id="@+id/BTN_PINK"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="220dp"
-        android:layout_marginTop="240dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="240dp"
+        android:layout_marginTop="245dp"
         android:background="@drawable/btn_pink"
         android:fontFamily="@font/titillium_web" />
 
     <Button
         android:id="@+id/BTN_WHITE"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="270dp"
-        android:layout_marginTop="240dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="295dp"
+        android:layout_marginTop="245dp"
         android:background="@drawable/btn_white"
         android:fontFamily="@font/titillium_web" />
 
