--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#121418</color>
-    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorPrimaryDark">#0a0b0d</color>
     <color name="colorConnectionBar">#0b0d10</color>
     <color name="colorPrimaryLight">#ffffff</color>
     <color name="colorAccent">#2157E0</color>
     <color name="connected">#2EFF36</color>
     <color name="disconnected">#FF0000</color>
+    <color name="colorDarkGrey">#616161</color>
+    <color name="colorLightGrey">#aaa</color>
+    <color name="colorDivider">#212121</color>
+    <color name="colorCards">#1a1c1f</color>
 </resources>
