--- a/android/app/src/main/res/values/preloaded_fonts.xml
+++ b/android/app/src/main/res/values/preloaded_fonts.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/fira_sans</item>
+        <item>@font/fira_sans_bold</item>
+        <item>@font/fira_sans_light</item>
         <item>@font/titillium_web</item>
         <item>@font/titillium_web_black</item>
         <item>@font/titillium_web_bold</item>
