--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -5,10 +5,13 @@
     <color name="colorConnectionBar">#0b0d10</color>
     <color name="colorPrimaryLight">#ffffff</color>
     <color name="colorAccent">#2157E0</color>
-    <color name="connected">#2EFF36</color>
-    <color name="disconnected">#FF0000</color>
+    <color name="colorAccentDark">#1a45b1</color>
+    <color name="colorGreen">#2EFF36</color>
+    <color name="colorRed">#D32F2F</color>
     <color name="colorDarkGrey">#616161</color>
     <color name="colorLightGrey">#aaa</color>
     <color name="colorDivider">#212121</color>
     <color name="colorCards">#1a1c1f</color>
+    <color name="connected">#2EFF36</color>
+    <color name="disconnected">#D32F2F</color>
 </resources>
