--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -7,8 +7,8 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingLeft="32dp"
+    android:paddingRight="32dp"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".LoginActivity"
     android:background="@color/colorPrimaryDark"
@@ -19,9 +19,12 @@
         android:id="@+id/login_progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:lottie_fileName="home.json"
+        android:layout_marginTop="250dp"
+        app:lottie_fileName="preloader.json"
+        app:lottie_colorFilter="@color/colorAccent"
         app:lottie_loop="true"
         android:visibility="gone"
+
         />
 
     <ScrollView
@@ -39,24 +42,21 @@
             android:focusableInTouchMode="true"
             >
 
-            <TextView
-                android:id="@+id/signIn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="95dp"
-                android:fontFamily="@font/fira_sans_bold"
-                android:text="Sign In"
-                android:textColor="#fff"
-                android:textSize="24dp" />
+            <ImageView
+                android:id="@+id/logo"
+                android:layout_width="51.25dp"
+                android:layout_height="48.25dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="70dp"
+                android:layout_marginBottom="40dp"
+                android:src="@drawable/house_blue"
+                />
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/emailInput"
                 android:theme="@style/OutLineTextField"
-                app:errorEnabled="true"
                 >
 
                 <android.support.design.widget.TextInputEditText
@@ -77,7 +77,6 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/passwordInput"
                 android:theme="@style/OutLineTextField"
-                app:errorEnabled="true"
                 >
 
                 <android.support.design.widget.TextInputEditText
@@ -101,9 +100,11 @@
                 style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:layout_marginTop="16dp"
-                android:fontFamily="@font/fira_sans"
-                android:text="@string/action_sign_in" />
+                android:layout_marginTop="50dp"
+                android:fontFamily="@font/fira_sans_bold"
+                android:textSize="16sp"
+                android:text="@string/action_sign_in"
+                android:textAllCaps="false" />
 
         </LinearLayout>
     </ScrollView>
