--- a/android/app/src/main/res/layout/nav_header.xml
+++ b/android/app/src/main/res/layout/nav_header.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="154dp"
     android:background="@color/colorPrimary"
-    android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     android:orientation="vertical"
     android:gravity="bottom">
@@ -12,19 +11,27 @@
         android:id="@+id/header_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
         android:text="Name Surname"
         android:textSize="14dp"
-        android:fontFamily="@font/fira_sans_bold"
+        android:fontFamily="@font/trebucbd"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
     <TextView
         android:id="@+id/header_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
         android:text="email@email.com"
         android:textSize="12dp"
-        android:textColor="#aaa"
-        android:fontFamily="@font/fira_sans"
+        android:textColor="@color/colorDarkGrey"
+        android:fontFamily="@font/trebuc"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorDark"
+        android:layout_marginTop="16dp"/>
 
 </LinearLayout>
