--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#121418</color>
-    <color name="colorPrimaryDark">#0a0b0d</color>
-    <color name="colorConnectionBar">#0b0d10</color>
+    <color name="colorPrimary">#000000</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorDark">#212121</color>
     <color name="colorPrimaryLight">#ffffff</color>
-    <color name="colorAccent">#2157E0</color>
+    <color name="colorAccent">#1980E8</color>
     <color name="colorAccentDark">#1a45b1</color>
     <color name="colorGreen">#2EFF36</color>
     <color name="colorRed">#D32F2F</color>
-    <color name="colorDarkGrey">#616161</color>
+    <color name="colorOrange">#d37c2f</color>
+    <color name="colorDarkGrey">#545454</color>
     <color name="colorLightGrey">#aaa</color>
     <color name="colorDivider">#212121</color>
-    <color name="colorCards">#1a1c1f</color>
+    <color name="colorCards">#080808</color>
     <color name="connected">#2EFF36</color>
     <color name="disconnected">#D32F2F</color>
 </resources>
