--- a/android/app/src/main/res/layout/activity_settings.xml
+++ b/android/app/src/main/res/layout/activity_settings.xml
@@ -74,7 +74,9 @@
                 android:layout_width="120dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="16dp"
+                android:layout_gravity="center"
                 android:fontFamily="@font/fira_sans"
+                android:textSize="14sp"
                 android:text="Save" />
         </LinearLayout>
     </ScrollView>
