--- a/android/app/src/main/res/menu/drawer_view.xml
+++ b/android/app/src/main/res/menu/drawer_view.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
+        <item android:title="Temperature">
+            <menu>
+                <item
+                    android:id="@+id/nav_graph"
+                    android:icon="@drawable/ic_show_chart"
+                    android:title="Graph" />
+            </menu>
+        </item>
         <item android:title="Account">
             <menu>
                 <item
